# ppno

./: .coverage  .gitignore  MANIFEST.in  README.md  README.txt  __init__.py  build_installer.ps1  construct.yaml  gaoptimizer.py  htxt.py  post_install.bat  ppno.py  pyproject.toml  requirements.txt  run_all_examples.bat  setup.py  test_fixes.ext  test_shgo.ext  toolkit.py
conda.recipe/: meta.yaml
examples/: CNT.inp  Example1.ext  Example2.ext  Example3.ext  Example4.ext  Example5.ext  Example6.ext  Example7.ext
ppno/: constants.py  gao.py  gaoptimizer.py  htxt.py  local_refiner.py  ppno.py  pygmo_solver.py  scipy_solver.py  section_parser.py  toolkit.py
ppno.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ppno/examples/: 1_HAN_UH.ext  1_han.ext  2_bin.ext  3_BIN_NSGA2.ext  3_nyt.ext  4_NYT_DA.ext  BIN.rpt  BIN_Solved_UH.inp  CNT.rpt  CNT_Solved_UH.inp  Example1.ext  Example2.ext  Example3.ext  Example4.ext  Example5.ext  Example6.ext  Example7.ext  HAN.inp  HAN_Solved_NSGA2.inp  HAN_Solved_PSO.inp  HAN_Solved_UH.inp  NYT.rpt  NYT_Solved_DA.inp  example_1.ext  example_2.ext  example_3.ext
scratch/: debug_final.py  debug_tests.py  fix_examples.py
tests/: test_constants.py  test_coverage_completion.py  test_local_refiner.py  test_ppno_core.py  test_pygmo_solver.py  test_scipy_solver.py  test_section_parser.py  test_toolkit.py
